--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       -->
 
       <section class="company-info">
-        <img src="../assets/img/tamingsarilogisticslogo.jpg" alt="logo" style="display: inline-block; vertical-align: middle; margin-right: 10px;">
+        <a href="index.html" class="logo"><img src="assets/img/tamingsarilogisticslogo.jpg" alt=""></a>
         <div style="display: inline-block; vertical-align: middle;">
           <br>
           <h1 class="logo" style="margin-bottom: 0;"><a href="index.html">Taming Sari</a></h1>
