--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
             <div class="icon-box">
               <div class="icon"><img src="assets/img/services/services-7.jpg" alt="Forklift And Generator Sets"></div>
               <h4>Sea Fastening</h4>
-              <p>Sea fastening which include preparing barge, ballasting, presetting of stool, iron beam, lashing , RORO activities, welding stopper, welding of pad eye, preparing for lashing job, securing cargo on board including providing </p>
+              <p>Our sea fastening solutions ensure the safe and secure transportation of cargo by sea, utilizing robust fastening techniques to withstand the rigors of marine transport. </p>
             </div>
           </div>
         
